fix plop template to entity name

--- a/plop/domain/templates/src/entity.hbs
+++ b/plop/domain/templates/src/entity.hbs
@@ -1,5 +1,5 @@
 import { Entity } from 'typeorm'
 import { Model } from '../../../shared/orm/Entity'
 
-@Entity('{{ capitalize name }}')
+@Entity('{{ name }}s')
 export class {{ capitalize name }} extends Model {}
